<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.tiagoeira.quizgame.GamePlayActivity"
    android:background="#ff005ab0">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/background_light"
            android:text="@string/textViewScore"
            android:id="@+id/textViewScore"
            android:layout_marginLeft="24dp"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_title_material"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/background_light"
            android:text="@string/textViewQuestion"
            android:id="@+id/textViewQuestion"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/abc_text_size_title_material_toolbar"
            android:layout_marginTop="@dimen/abc_action_bar_stacked_max_height" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnA"
            android:id="@+id/btnAnswerA"
            android:background="@color/ripple_material_dark"
            android:textColor="@android:color/background_light"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnB"
            android:id="@+id/btnAnswerB"
            android:background="@color/ripple_material_light"
            android:textColor="@android:color/background_light"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnC"
            android:id="@+id/btnAnswerC"
            android:background="@color/ripple_material_dark"
            android:textColor="@android:color/background_light"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnD"
            android:id="@+id/btnAnswerD"
            android:background="@color/ripple_material_light"
            android:textColor="@android:color/background_light"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayoutHelp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnHelp50"
            android:id="@+id/btnHelp50" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnHelpPub"
            android:id="@+id/btnHelpPub" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnHelpPhone"
            android:id="@+id/btnHelpPhone" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/background_light"
        android:text="@string/textViewQnr"
        android:id="@+id/textViewQnr"
        android:layout_gravity="center_horizontal" />


</RelativeLayout>
