<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#ff005ab0"
    android:clickable="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/btnNewGame"
            android:id="@+id/btnNewGame"
            android:layout_gravity="center_horizontal"
            android:background="@color/ripple_material_dark"
            android:textColor="@android:color/background_light" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/btnSettings"
            android:id="@+id/btnSettings"
            android:layout_gravity="center_horizontal"
            android:background="@color/ripple_material_light"
            android:textColor="@android:color/background_light" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/btnExit"
            android:id="@+id/btnExit"
            android:layout_gravity="center_horizontal"
            android:background="@color/ripple_material_light"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleTextView"
        android:id="@+id/titleTextView"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_action_bar_progress_bar_size"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
